加了好多功能，包括camera和battery

--- a/app/src/main/res/layout/activity_default_layout.xml
+++ b/app/src/main/res/layout/activity_default_layout.xml
@@ -44,6 +44,7 @@
             android:layout_height="22dp"/>
 
         <dji.ux.widget.RemoteControlSignalWidget
+            android:id="@+id/remoteControlSignalWidget"
             android:layout_width="38dp"
             android:layout_height="22dp"/>
 
