--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="dark_gray">#80000000</color>
     <color name="button_normal">#50808080</color>
     <color name="button_press">#5086BFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="blue">#538ED5</color>
 </resources>
