--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,4 +8,9 @@
     <dimen name="left_button_list_button_margin_left">10dp</dimen>
     <dimen name="left_button_list_button_margin_top">10dp</dimen>
     <dimen name="left_button_list_button_text_size">14sp</dimen>
+
+    <dimen name="customactivityoncrash_activity_horizontal_margin">16dp</dimen>
+    <dimen name="customactivityoncrash_activity_vertical_margin">16dp</dimen>
+
+    <dimen name="customactivityoncrash_error_activity_error_details_text_size">12sp</dimen>
 </resources>
