--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -98,6 +98,18 @@
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
         />
+    <Button
+        android:id="@+id/btn_payload_send"
+        android:layout_width="150dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/round_btn"
+        android:text="PlSEND"
+        android:layout_marginLeft="20dp"
+        android:layout_below="@+id/btn_login"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+        />
 
     <Button
         android:id="@+id/btn_simulator"
@@ -137,10 +149,23 @@
         android:textSize="15dp"
         android:visibility="gone"
         android:id="@+id/textView2" />
-
+    <Button
+        android:id="@+id/btn_cancel"
+        android:layout_width="150dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/round_btn"
+        android:layout_marginLeft="20dp"
+        android:text="Cancel"
+        android:layout_below="@+id/et_zoom"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+        />
     <TextureView
         android:id="@+id/video_previewer_surface"
-        android:layout_below="@+id/btn_login"
+        android:layout_below="@+id/btn_payload_send"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
