--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -59,7 +59,20 @@
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
         />
-
+    <Button
+        android:id="@+id/btn_pl"
+        android:layout_width="50dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="350dp"
+        android:layout_toRightOf="@+id/btn_login"
+        android:background="@drawable/round_btn"
+        android:text="喊话"
+        android:layout_toLeftOf="@+id/btn_download"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:textColor="@color/colorWhite"
+        android:textSize="20dp"
+        />
     <Button
         android:id="@+id/btn_download"
         android:layout_width="150dp"
