--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<!--test-->
+<!--test1-->
     <TextView
         android:id="@+id/text_connection_status"
         android:layout_width="wrap_content"
