--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -7,9 +7,10 @@
     <Button
         android:visibility="gone"
         android:id="@+id/bt_login_account"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:text="登录"/>
     <TextView
         android:id="@+id/text_connection_status"
