更改部分航点动作和新镜头

--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -198,7 +198,7 @@
 
     <TextureView
         android:id="@+id/video_previewer_surface"
-        android:layout_below="@+id/btn_login"
+        android:layout_below="@+id/btn_open"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
