修改监听电池电量状态方法，添加测试product状态代码。

--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_alignParentRight="true"
         android:text="Status: No Product Connected"
         android:textColor="@android:color/black"
         android:textSize="20dp"
@@ -24,11 +25,23 @@
         android:layout_alignBottom="@+id/text_product_info"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
-
+    <TextView
+        android:id="@+id/text_plane_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:layout_alignParentLeft="true"
+        android:text="当前状态"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        />
     <TextView
         android:id="@+id/text_product_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:text="@string/product_information"
@@ -42,8 +55,7 @@
         android:id="@+id/text_net_rtk_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+android:layout_alignParentRight="true"        android:layout_marginTop="100dp"
         android:text="---"
         android:textColor="@android:color/black"
         android:textSize="20dp"
@@ -54,8 +66,7 @@
         android:id="@+id/text_net_rtk_account_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
+android:layout_alignParentRight="true"        android:layout_marginTop="130dp"
         android:text="---"
         android:textColor="@android:color/black"
         android:textSize="20dp"
