--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_alignParentRight="true"
+android:layout_centerInParent="true"
         android:text="Status: No Product Connected"
         android:textColor="@android:color/black"
         android:textSize="20dp"
@@ -29,8 +29,9 @@
         android:id="@+id/text_plane_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="40dp"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="30dp"
         android:text="当前状态"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
@@ -41,9 +42,10 @@
         android:id="@+id/text_product_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
         android:text="@string/product_information"
         android:textColor="@android:color/black"
         android:textSize="20dp"
