--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -32,7 +32,7 @@ android:layout_centerInParent="true"
         android:layout_marginTop="40dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="30dp"
-        android:text="当前状态"
+        android:text=""
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
         android:gravity="center"
@@ -43,9 +43,8 @@ android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:text="@string/product_information"
         android:textColor="@android:color/black"
         android:textSize="20dp"
@@ -57,7 +56,8 @@ android:layout_centerInParent="true"
         android:id="@+id/text_net_rtk_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_alignParentRight="true"        android:layout_marginTop="100dp"
+       android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
         android:text="---"
         android:textColor="@android:color/black"
         android:textSize="20dp"
@@ -68,7 +68,7 @@ android:layout_alignParentRight="true"        android:layout_marginTop="100dp"
         android:id="@+id/text_net_rtk_account_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_alignParentRight="true"        android:layout_marginTop="130dp"
+android:layout_centerHorizontal="true"       android:layout_marginTop="130dp"
         android:text="---"
         android:textColor="@android:color/black"
         android:textSize="20dp"
