--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -26,6 +26,7 @@ android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
     <TextView
+        android:visibility="gone"
         android:id="@+id/text_plane_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +55,7 @@ android:layout_centerInParent="true"
 
     <TextView
         android:id="@+id/text_net_rtk_state"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
