--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -156,6 +156,7 @@ android:layout_centerHorizontal="true"       android:layout_marginTop="130dp"
         android:layout_below="@+id/btn_open"
         android:textColor="@color/colorWhite"
         android:textSize="20dp"
+        android:visibility="gone"
         />
 
     <Button
@@ -165,6 +166,7 @@ android:layout_centerHorizontal="true"       android:layout_marginTop="130dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/round_btn"
         android:text="停止循环播放"
+        android:visibility="gone"
         android:layout_marginLeft="20dp"
         android:layout_below="@+id/btn_gaode"
         android:textColor="@color/colorWhite"
@@ -202,21 +204,21 @@ android:layout_centerHorizontal="true"       android:layout_marginTop="130dp"
         android:id="@+id/btn_stop_live_show"
         android:layout_width="100dp"
         android:layout_height="55dp"
-        android:layout_below="@+id/btn_login"
-        android:layout_alignParentRight="true"
+        android:layout_below="@+id/btn_start_live_show"
         android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/round_btn"
         android:text="停止推流"
+        android:layout_marginLeft="20dp"
         android:textColor="@color/colorWhite"
         android:textSize="20dp" />
     <Button
         android:id="@+id/btn_start_live_show"
         android:layout_width="100dp"
         android:layout_height="55dp"
-        android:layout_below="@+id/btn_stop_live_show"
-        android:layout_alignParentRight="true"
+        android:layout_below="@+id/btn_open"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/round_btn"
         android:text="开始推流"
