非正常恢复

--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -69,11 +69,23 @@ android:layout_centerInParent="true"
         android:id="@+id/text_net_rtk_account_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_centerHorizontal="true"       android:layout_marginTop="130dp"
+android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"
         android:text="---"
         android:textColor="@android:color/black"
         android:textSize="20dp"
         android:gravity="center"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:id="@+id/text_wendu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+android:layout_alignParentRight="true"
+        android:text="0"
+        android:textColor="@android:color/black"
+        android:textSize="20dp"
+        android:gravity="right"
         android:textStyle="bold"
         />
     <EditText
